all the "no" options.

** `language` option
The `lang` option has been replaced by `language` to match the `--language`
command-line option.

** Fixed `set` _lang_
Giving a value for a language for the `set` command is now correctly forbidden,
e.g.:

    cdecl> set c=x
                 ^
    7: error: "x": set option "c" takes no value


* Changes in Cdecl 18.2

** More permissive types
Unknown names are now always permitted as types in pseudo-English.  Hence, the
`--permissive-types` option now only additionally allows keywords in language
versions other than the current language as types.


* Changes in Cdecl 18.1

** `alignas` scoped names
Alignments can now have names to denote the number of bytes, e.g.:

    c++decl> explain alignas(N) char c
    declare c as character aligned as N bytes

where `N` is presumed to be an integer constant.

** `_BitInt` multi-declarations
Declarations like:

    declare x, y as bit precise integer 4

are now correct.

** `CDECL_TEST=false` tests
Fixed these tests.

** `CDECL_TEST=true` & `--no-config`
Specifying the `--no-config` option now always works even when testing.

** `enum`, `class`, `struct`, & `union` multi-declarations
Explaining these is now correct, e.g.:

    cdecl> explain enum E x, y, f()
    declare x, y as enumeration E
    declare f as function returning enumeration E

** Glob help
Fixed glob help.

** Implicit `int` warnings
In C89, implicit `int` is now warned about in more cases, e.g.:

    cdecl> set c89
    cdecl> explain static x
                   ^
    9: warning: missing type specifier; "int" assumed
    declare x as static integer

** K&R C typeless parameters in English
To match gibberish output, K&R C typeless parameters now print `as integer` in
pseudo-English:

    cdecl> set c17
    cdecl> explain char f(x)
                          ^
    16: warning: missing type specifier; "int" assumed
    declare f as function (x as integer) returning character

** `--no-prompt` option short option