@@ -352,6 +352,22 @@ RECURSIVE_1 => f(RECURSIVE_2)
 106,18: warning: recursive macro "RECURSIVE_1" will not expand
 RECURSIVE_1 => f(RECURSIVE_1)
 cdecl> 
+cdecl> // See <https://www.corsix.org/content/va-opt-minutiae>
+cdecl> #define CALL_QUOTE(X)             QUOTE(X)
+cdecl> #define TILDAS(...)               ~__VA_OPT__( ~ )~
+cdecl> expand CALL_QUOTE(TILDAS(x))
+CALL_QUOTE(TILDAS(x)) => QUOTE(X)
+| X => TILDAS(x)
+| | TILDAS(x) => ~__VA_OPT__( ~ )~
+| | | __VA_ARGS__ => x
+| | | __VA_OPT__ => ~
+| | TILDAS(x) => ~~~
+| X => ~~~
+CALL_QUOTE(~~~) => QUOTE(~~~)
+| QUOTE(~~~) => #X
+| QUOTE(~~~) => "~~~"
+CALL_QUOTE(~~~) => "~~~"
+cdecl> 
 cdecl> #define UNIQUE_NAME(PREFIX)       PASTE(PASTE(PREFIX,_),__LINE__)
 cdecl> expand UNIQUE_NAME(unused)
 UNIQUE_NAME(unused) => PASTE(PASTE(PREFIX,_),__LINE__)
@@ -425,12 +441,12 @@ cdecl>
 cdecl> set c99
 cdecl> #define VA_OPT_NOT_SUPPORTED(...) __VA_OPT__(,)
                                          ^
-129,35: warning: "__VA_OPT__" not supported until C23; treated as text
+134,35: warning: "__VA_OPT__" not supported until C23; treated as text
 cdecl> #undef VA_OPT_NOT_SUPPORTED
 cdecl> set c++17
 c++decl> #define VA_OPT_NOT_SUPPORTED(...) __VA_OPT__(,)
                                            ^
-132,35: warning: "__VA_OPT__" not supported until C++20; treated as text
+137,35: warning: "__VA_OPT__" not supported until C++20; treated as text
 c++decl> #undef VA_OPT_NOT_SUPPORTED
 c++decl> set c
 cdecl> #define VA_OPT_NOT_SUPPORTED(...) __VA_OPT__(,) __VA_ARGS__
@@ -438,42 +454,42 @@ cdecl> set c99
 cdecl> expand VA_OPT_NOT_SUPPORTED(X)
 VA_OPT_NOT_SUPPORTED(X) => __VA_OPT__(,) __VA_ARGS__
                            ^
-137,28: warning: "__VA_OPT__" not supported until C23; will not expand
+142,28: warning: "__VA_OPT__" not supported until C23; will not expand
 | __VA_ARGS__ => X
 VA_OPT_NOT_SUPPORTED(X) => __VA_OPT__(,) X
 cdecl> 
 cdecl> set c78
 cdecl> #define OLD_PASTE(A,B)            A ## B
                                            ^
-140,37: warning: "##" not supported until C89; treated as text
+145,37: warning: "##" not supported until C89; treated as text
 cdecl> expand OLD_PASTE(x, y)
 OLD_PASTE(x, y) => A ## B
                      ^
-141,22: warning: "##" not supported until C89; treated as text
+146,22: warning: "##" not supported until C89; treated as text
 OLD_PASTE(x, y) => x ## y
 cdecl> 
 cdecl> #define OLD_VA_ARGS(...)          __VA_ARGS__
                            ^
-143,21: error: variadic macros not supported until C99
+148,21: error: variadic macros not supported until C99
 cdecl> set c
 cdecl> #define OLD_VA_ARGS(...)          __VA_ARGS__
 cdecl> set c78
 cdecl> expand OLD_VA_ARGS(x,y)
 #define OLD_VA_ARGS(...) __VA_ARGS__
                     ^
-145,21: error: variadic macros not supported until C99
+150,21: error: variadic macros not supported until C99
 cdecl> 
 cdecl> #define OLD_USE_VA_ARGS           __VA_ARGS__
                                          ^
-149,35: warning: "__VA_ARGS__" not supported until C99; treated as text
+154,35: warning: "__VA_ARGS__" not supported until C99; treated as text
 cdecl> 
 cdecl> #define OLD_QUOTE(X)              #X
                                          ^
-151,35: warning: '#' not supported until C89; treated as text
+156,35: warning: '#' not supported until C89; treated as text
 cdecl> expand OLD_QUOTE(a)
 OLD_QUOTE(a) => #X
                 ^
-152,17: warning: '#' not supported until C89; treated as text
+157,17: warning: '#' not supported until C89; treated as text
 OLD_QUOTE(a) => #a
 cdecl> 
 cdecl> set c17
@@ -598,7 +614,7 @@ NARG(x) => NARG_HELPER1( HAS_COMMA( __VA_ARGS__ ), HAS_COMMA( NARG_COMMA __VA_AR
 | __VA_ARGS__ => x
 NARG(x) => NARG_HELPER1( HAS_COMMA( x ), HAS_COMMA( NARG_COMMA x () ), NARG_( x, REV_SEQ_N ) )
                                                     ^
-201,53: warning: "NARG_COMMA": function-like macro without arguments will not expand
+206,53: warning: "NARG_COMMA": function-like macro without arguments will not expand
 | NARG_HELPER1(HAS_COMMA( x ), HAS_COMMA( NARG_COMMA x () ), NARG_( x, REV_SEQ_N )) => NARG_HELPER2(A, B, N)
 | | A => HAS_COMMA( x )
 | | | HAS_COMMA(x) => NARG_( __VA_ARGS__, HAS_COMMA_N )
@@ -658,7 +674,7 @@ NARG(x, y) => NARG_HELPER1( HAS_COMMA( __VA_ARGS__ ), HAS_COMMA( NARG_COMMA __VA
 | __VA_ARGS__ => x, y
 NARG(x, y) => NARG_HELPER1( HAS_COMMA( x, y ), HAS_COMMA( NARG_COMMA x, y () ), NARG_( x, y, REV_SEQ_N ) )
                                                           ^
-202,59: warning: "NARG_COMMA": function-like macro without arguments will not expand
+207,59: warning: "NARG_COMMA": function-like macro without arguments will not expand
 | NARG_HELPER1(HAS_COMMA( x, y ), HAS_COMMA( NARG_COMMA x, y () ), NARG_( x, y, REV_SEQ_N )) => NARG_HELPER2(A, B, N)
 | | A => HAS_COMMA( x, y )
 | | | HAS_COMMA(x, y) => NARG_( __VA_ARGS__, HAS_COMMA_N )
@@ -804,10 +820,10 @@ cx_throw() => DEF_ARGS(THROW_, )
 | | | PASTE_HELPER(THROW_, 0) => THROW_ ## 0
 | | | PASTE_HELPER(THROW_, 0) => THROW_0
                                  ^
-216,34: warning: "THROW_0": function-like macro without arguments will not expand
+221,34: warning: "THROW_0": function-like macro without arguments will not expand
 | | PASTE(THROW_, 0) => THROW_0
                         ^
-216,25: warning: "THROW_0": function-like macro without arguments will not expand
+221,25: warning: "THROW_0": function-like macro without arguments will not expand
 | DEF_ARGS(THROW_,) => THROW_0()
 | | THROW_0() => THROW_1( cx_tb.thrown_xid )
 | | | THROW_1(cx_tb.thrown_xid) => THROW_2( (XID), cx_user_data() )
@@ -840,7 +856,7 @@ cx_throw(123) => DEF_ARGS(THROW_, 123)
 | | | | | __VA_ARGS__ => 123
 | | | | NARG(123) => NARG_HELPER1( HAS_COMMA( 123 ), HAS_COMMA( NARG_COMMA 123 () ), NARG_( 123, REV_SEQ_N ) )
                                                                 ^
-217,65: warning: "NARG_COMMA": function-like macro without arguments will not expand
+222,65: warning: "NARG_COMMA": function-like macro without arguments will not expand
 | | | | | NARG_HELPER1(HAS_COMMA( 123 ), HAS_COMMA( NARG_COMMA 123 () ), NARG_( 123, REV_SEQ_N )) => NARG_HELPER2(A, B, N)
 | | | | | | A => HAS_COMMA( 123 )
 | | | | | | | HAS_COMMA(123) => NARG_( __VA_ARGS__, HAS_COMMA_N )
@@ -901,10 +917,10 @@ cx_throw(123) => DEF_ARGS(THROW_, 123)
 | | | PASTE_HELPER(THROW_, 1) => THROW_ ## 1
 | | | PASTE_HELPER(THROW_, 1) => THROW_1
                                  ^
-217,34: warning: "THROW_1": function-like macro without arguments will not expand
+222,34: warning: "THROW_1": function-like macro without arguments will not expand
 | | PASTE(THROW_, 1) => THROW_1
                         ^
-217,25: warning: "THROW_1": function-like macro without arguments will not expand
+222,25: warning: "THROW_1": function-like macro without arguments will not expand
 | DEF_ARGS(THROW_, 123) => THROW_1( 123)
 | | THROW_1(123) => THROW_2( (XID), cx_user_data() )
 | | | XID => 123
@@ -935,7 +951,7 @@ cx_throw(123, ptr) => DEF_ARGS(THROW_, 123, ptr)
 | | | | | __VA_ARGS__ => 123, ptr
 | | | | NARG(123, ptr) => NARG_HELPER1( HAS_COMMA( 123, ptr ), HAS_COMMA( NARG_COMMA 123, ptr () ), NARG_( 123, ptr, REV_SEQ_N ) )
                                                                           ^
-218,75: warning: "NARG_COMMA": function-like macro without arguments will not expand
+223,75: warning: "NARG_COMMA": function-like macro without arguments will not expand
 | | | | | NARG_HELPER1(HAS_COMMA( 123, ptr ), HAS_COMMA( NARG_COMMA 123, ptr () ), NARG_( 123, ptr, REV_SEQ_N )) => NARG_HELPER2(A, B, N)
 | | | | | | A => HAS_COMMA( 123, ptr )
 | | | | | | | HAS_COMMA(123, ptr) => NARG_( __VA_ARGS__, HAS_COMMA_N )
@@ -998,10 +1014,10 @@ cx_throw(123, ptr) => DEF_ARGS(THROW_, 123, ptr)
 | | | PASTE_HELPER(THROW_, 2) => THROW_ ## 2
 | | | PASTE_HELPER(THROW_, 2) => THROW_2
                                  ^
-218,34: warning: "THROW_2": function-like macro without arguments will not expand
+223,34: warning: "THROW_2": function-like macro without arguments will not expand
 | | PASTE(THROW_, 2) => THROW_2
                         ^
-218,25: warning: "THROW_2": function-like macro without arguments will not expand
+223,25: warning: "THROW_2": function-like macro without arguments will not expand
 | DEF_ARGS(THROW_, 123, ptr) => THROW_2( 123, ptr)
 | | THROW_2(123, ptr) => cx_impl_throw( __FILE__, __LINE__, (XID), (void*)(DATA) )
 | | | XID => 123
@@ -1019,19 +1035,19 @@ cdecl> set knr
 cdecl> 
 cdecl> #define OLD_DATE                  __DATE__
                                          ^
-224,35: warning: "__DATE__" not supported until C89; will not expand
+229,35: warning: "__DATE__" not supported until C89; will not expand
 cdecl> expand OLD_DATE
 OLD_DATE => __DATE__
             ^
-225,13: warning: "__DATE__" not supported until C89; will not expand
+230,13: warning: "__DATE__" not supported until C89; will not expand
 cdecl> 
 cdecl> #define OLD_TIME                  __TIME__
                                          ^
-227,35: warning: "__TIME__" not supported until C89; will not expand
+232,35: warning: "__TIME__" not supported until C89; will not expand
 cdecl> expand OLD_TIME
 OLD_TIME => __TIME__
             ^
-228,13: warning: "__TIME__" not supported until C89; will not expand
+233,13: warning: "__TIME__" not supported until C89; will not expand
 cdecl> 
 cdecl> set c
 cdecl> 
